<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/register_password" />

    <EditText
        android:id="@+id/register_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/register_repeat_password" />

    <EditText
        android:id="@+id/register_user_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_first_name" />

    <EditText
        android:id="@+id/register_user_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_last_name" />

    <EditText
        android:id="@+id/register_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/register_phone_number" />

    <EditText
        android:id="@+id/register_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_image" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_complete_register"
            android:background="@drawable/btn_red"
            android:text="@string/sign_in_register"
            style="@style/SignInButton"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <TextView
            android:id="@+id/btn_decline_later"
            android:background="@drawable/btn_red"
            android:text="@string/sign_in_later"
            style="@style/LaterButton"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

    </LinearLayout>

</LinearLayout>