<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/sign_in_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_in_username" />

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/sign_in_password" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
        android:id="@+id/btn_submit"
        android:background="@drawable/btn_red"
        android:text="@string/sign_in"
        style="@style/SignInButton"/>

        <ProgressBar
            android:id="@+id/view_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/btn_submit"
            android:layout_alignTop="@id/btn_submit"
            android:layout_alignBottom="@id/btn_submit"
            android:visibility="gone"
            style="@android:style/Widget.Holo.ProgressBar" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_later"
            android:background="@drawable/btn_red"
            android:text="@string/sign_in_later"
            style="@style/LaterButton"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/btn_register"
            android:background="@drawable/btn_red"
            android:text="@string/sign_in_register"
            style="@style/SignInButton"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </LinearLayout>

</LinearLayout>